# Ordinal-Browser

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
agent/: __init__.py  requirements.txt
agent/analyzers/: __init__.py  content_security.py  malware_analyzer.py  phishing_analyzer.py  privacy_analyzer.py  url_reputation.py
agent/api/: __init__.py  grpc_server.py
agent/core/: __init__.py  agent.py  config.py  realtime_monitor.py  report_generator.py
agent/models/: __init__.py  embeddings.py  inference.py
agent/proto/: security.proto
agent/tests/: conftest.py  test_agent.py  test_analyzers.py
agent/utils/: __init__.py  feature_extractor.py  threat_db.py  url_checker.py
docs/: architecture.md  security-agent.md  v8-integration.md
packaging/: CMakeLists.txt
packaging/linux/: create_appimage.sh  create_deb.sh  ordinal-browser.desktop
packaging/macos/: Info.plist  create_dmg.sh
packaging/windows/: installer.nsi
resources/: OrdinalBrowser.icns  OrdinalV8.icns
scripts/: build_v8.sh  setup.sh
src/: main.cpp
src/adblock/: adblock_engine.cpp  adblock_engine.h  cosmetic_filter.cpp  cosmetic_filter.h  filter_parser.cpp  filter_parser.h
src/core/: browser_app.cpp  browser_app.h  js_bridge.cpp  js_bridge.h  media_controller.cpp  media_controller.h  page.cpp  page.h  performance_monitor.cpp  performance_monitor.h  tab.cpp  tab.h  tab_manager.cpp  tab_manager.h  v8_engine.cpp  v8_engine.h
src/data/: bookmark_manager.cpp  bookmark_manager.h  data_store.cpp  data_store.h  download_manager.cpp  download_manager.h  history_manager.cpp  history_manager.h  session_manager.cpp  session_manager.h
src/engine/: browser_window.cpp  browser_window.h  data_manager.cpp  data_manager.h  extension_loader.cpp  extension_loader.h  feed_tools.cpp  feed_tools.h  llm_assistant.cpp  llm_assistant.h  newtab_credentials.cpp  newtab_credentials.h  permissions_access.cpp  permissions_access.h  pwa_search_sync.cpp  pwa_search_sync.h  security_tabgroup.cpp  security_tabgroup.h  settings_page.cpp  settings_page.h  sidebar_translate.cpp  sidebar_translate.h  theme_engine.cpp  theme_engine.h  url_completer.cpp  url_completer.h  userscript_devtools.cpp  userscript_devtools.h  web_engine.cpp  web_engine.h
src/extensions/: content_script.cpp  content_script.h  extension.cpp  extension.h  extension_api.cpp  extension_api.h  extension_manager.cpp  extension_manager.h
src/network/: dns_resolver.cpp  dns_resolver.h  download_accelerator.cpp  download_accelerator.h  http_client.cpp  http_client.h  proxy_manager.cpp  proxy_manager.h  request_interceptor.cpp  request_interceptor.h  ssl_inspector.cpp  ssl_inspector.h  websocket_client.cpp  websocket_client.h
src/privacy/: autofill_engine.cpp  autofill_engine.h  consent_handler.cpp  consent_handler.h  cookie_manager.cpp  cookie_manager.h  password_manager.cpp  password_manager.h  webrtc_guard.cpp  webrtc_guard.h
src/rendering/: css_parser.cpp  css_parser.h  dom_tree.cpp  dom_tree.h  html_parser.cpp  html_parser.h  layout_engine.cpp  layout_engine.h
src/security/: cert_validator.cpp  cert_validator.h  phishing_detector.cpp  phishing_detector.h  privacy_tracker.cpp  privacy_tracker.h  script_analyzer.cpp  script_analyzer.h  security_agent.cpp  security_agent.h  xss_analyzer.cpp  xss_analyzer.h
src/ui/: about_dialog.cpp  about_dialog.h  address_bar.cpp  address_bar.h  dev_tools_panel.cpp  dev_tools_panel.h  main_window.cpp  main_window.h  reader_mode.cpp  reader_mode.h  security_panel.cpp  security_panel.h  settings_dialog.cpp  settings_dialog.h  tab_bar.cpp  tab_bar.h  theme_manager.cpp  theme_manager.h
tests/: CMakeLists.txt  test_network.cpp  test_rendering.cpp  test_security.cpp
